--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -12,7 +12,7 @@
     <p>Click here to view more <a href="#">cat photos</a>.</p>
   
     <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
-  
+  <div>
     <p>Things cats love:</p>
     <ul>
       <li>cat nip</li>
@@ -25,12 +25,13 @@
       <li>thunder</li>
       <li>other cats</li>
     </ol>
+  </div>
     <form action="https://www.freecatphotoapp.com/submit-cat-photo">
-      <label for="indoor"><input id="indoor" type="radio" name="indoor-outdoor"> Indoor</label>
-      <label for="outdoor"><input id="outdoor" type="radio" name="indoor-outdoor"> Outdoor</label><br>
-      <label for="loving"><input id="loving" type="checkbox" name="personality"> Loving</label>
-      <label for="lazy"><input id="lazy" type="checkbox" name="personality"> Lazy</label>
-      <label for="energetic"><input id="energetic" type="checkbox" name="personality"> Energetic</label><br>
+      <label for="indoor"><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
+      <label for="outdoor"><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label><br>
+      <label for="loving"><input id="loving" type="checkbox" name="personality" value="loving" checked> Loving</label>
+      <label for="lazy"><input id="lazy" type="checkbox" name="personality" value="lazy"> Lazy</label>
+      <label for="energetic"><input id="energetic" type="checkbox" name="personality" value="energetic"> Energetic</label><br>
       <input type="text" placeholder="cat photo URL" required>
       <button type="submit">Submit</button>
     </form>
