--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -7,7 +7,7 @@
     <title>CatPhotoApp</title>
 </head>
 <body>
-  <h2>CatPhotoApp</h2>
+  <h2 style="color:red;">CatPhotoApp</h2>
   <main>
     <p>Click here to view more <a href="#">cat photos</a>.</p>
   
