--- a/Cat Photo App/index.html
+++ b/Cat Photo App/index.html
@@ -8,15 +8,18 @@
 </head>
 <body>
   <style>
-    h2 {
-      color: blue;
+    .red-text {
+      color: red;
+    }
+  
+    p {
+      font-size: 16px;
     }
   </style>
-
-  <h2>CatPhotoApp</h2>
-
+  
+  <h2 class="red-text">CatPhotoApp</h2>
   <main>
-    <p>Click here to view more <a href="#">cat photos</a>.</p>
+    <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
     <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
  
     <div>
@@ -50,7 +53,7 @@
       <input type="text" placeholder="cat photo URL" required>
 
       <button type="submit">Submit</button>
-      
+
     </form>
   </main>
 </body>
