--- a/Cat Photo App/index.html
+++ b/Cat Photo App/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>CatPhotoApp</title>
 </head>
 <body>
   <style>
+      h2{
+    font-family:lobster;
+  }
     .red-text {
       color: red;
     }
@@ -15,12 +19,20 @@
     p {
       font-size: 16px;
     }
+    .smaller-image {
+    width: 100px;
+  }
+  .thick-green-border {
+    border-color: green;
+    border-width: 10px;
+    border-style: solid;
+  }
   </style>
   
   <h2 class="red-text">CatPhotoApp</h2>
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
-    <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+    <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="smaller-image thick-green-border" alt="A cute orange cat lying on its back."></a>
  
     <div>
 
