--- a/Cat Photo App/index.html
+++ b/Cat Photo App/index.html
@@ -9,63 +9,64 @@
 </head>
 <body>
   <style>
-      h2{
-    font-family:lobster;
-  }
     .red-text {
       color: red;
     }
   
+    h2 {
+      font-family: Lobster, monospace;
+    }
+  
     p {
       font-size: 16px;
+      font-family: monospace;
     }
+  
+    .thick-green-border {
+      border-color: green;
+      border-width: 10px;
+      border-style: solid;
+      border-radius: 50%;
+    }
+  
     .smaller-image {
-    width: 100px;
-  }
-  .thick-green-border {
-    border-color: green;
-    border-width: 10px;
-    border-style: solid;
-  }
+      width: 100px;
+    }
+  
+    .silver-background {
+      background-color: silver;
+    }
   </style>
   
   <h2 class="red-text">CatPhotoApp</h2>
   <main>
     <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
-    <a href="#"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="smaller-image thick-green-border" alt="A cute orange cat lying on its back."></a>
- 
-    <div>
-
-    <p>Things cats love:</p>
-
-    <ul>
-      <li>cat nip</li>
-      <li>laser pointers</li>
-      <li>lasagna</li>
-    </ul>
-
-    <p>Top 3 things cats hate:</p>
-
-    <ol>
-      <li>flea treatment</li>
-      <li>thunder</li>
-      <li>other cats</li>
-    </ol>
-
-  </div>
-
-    <form action="https://www.freecatphotoapp.com/submit-cat-photo">
-      <label for="indoor"><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
-      <label for="outdoor"><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label><br>
-
-      <label for="loving"><input id="loving" type="checkbox" name="personality" value="loving" checked> Loving</label>
-      <label for="lazy"><input id="lazy" type="checkbox" name="personality" value="lazy"> Lazy</label>
-      <label for="energetic"><input id="energetic" type="checkbox" name="personality" value="energetic"> Energetic</label><br>
-
+  
+    <a href="#"><img class="smaller-image thick-green-border" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+  
+    <div class="silver-background">
+      <p>Things cats love:</p>
+      <ul>
+        <li>cat nip</li>
+        <li>laser pointers</li>
+        <li>lasagna</li>
+      </ul>
+      <p>Top 3 things cats hate:</p>
+      <ol>
+        <li>flea treatment</li>
+        <li>thunder</li>
+        <li>other cats</li>
+      </ol>
+    </div>
+  
+    <form action="https://freecatphotoapp.com/submit-cat-photo" id="cat-photo-form">
+      <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
+      <label><input type="radio" name="indoor-outdoor"> Outdoor</label><br>
+      <label><input type="checkbox" name="personality" checked> Loving</label>
+      <label><input type="checkbox" name="personality"> Lazy</label>
+      <label><input type="checkbox" name="personality"> Energetic</label><br>
       <input type="text" placeholder="cat photo URL" required>
-
       <button type="submit">Submit</button>
-
     </form>
   </main>
 </body>
